src/FinancialForce Accounting/objects/codaTextDefinition__c.object
<CustomObject>
    <customHelpPage>codahelptextdefitintion</customHelpPage>
    <description>Stores predefined, reusable snippets of text that can be included on a sales invoice or credit note.</description>
    <fields>
        <fullName>AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditNote__c</fullName>
        <label>Credit Note</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Used</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Allowed</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Heading__c</fullName>
        <label>Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Used</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Allowed</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Text Definitions</relationshipLabel>
        <relationshipName>TextDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TextPosition__c</fullName>
        <label>Text Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UnitofWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Text Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Heading__c</columns>
        <columns>Invoice__c</columns>
        <columns>CreditNote__c</columns>
        <columns>TextPosition__c</columns>
        <columns>OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Text Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Text Definitions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>